[tool.poetry]
name = "repl-nix-solanaarbitragebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
base58 = "^2.1.1"
solana = "0.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
